# caroube

./: AUTHORS  Makefile.am  caroube.dox  caroube.dox.in  configure.in  dodoc  doit  doit+clean
src/: Makefile.am  asequencer.cpp  audio.cpp  conv_ieee_ext.c  fft.c  midi.cpp  readsample.cpp  samplesonge.cpp  testdll.c
src/include/caroube/: asequencer.h  audio.h  caroube.h  conv_ieee_ext.h  fft.h  midi.h  readsample.h  samplesonge.h  voncendian.h
